...
                android:gravity="center"
                android:padding="@dimen/margin_activity_small"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:contentDescription="@string/ingredients_list_header_title_content_description"
                android:text="@string/ingredients_list_header_title"
                app:layout_constraintBottom_toTopOf="@+id/ingredients_list_fragment" />

            <!-- Ingredients fragment -->
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ingredients_list_fragment"
                android:name="com.bullach.android.bakingapp.ui.fragments.IngredientsListFragment"
                android:layout_width="match_parent"
...
                android:text="@string/steps_list_header_title"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/margin_activity_small"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/steps_list_fragment"
                app:layout_constraintTop_toBottomOf="@id/ingredients_list_fragment" />

            <!-- Steps fragment -->
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/steps_list_fragment"
                android:name="com.bullach.android.bakingapp.ui.fragments.StepsListFragment"
...
