<resources>
    <string name="app_name">Baking App</string>

    <!-- Strings for recipe list activity -->
    <string name="recipe_list_image_content_description">The recipe image</string>
    <string name="recipe_list_no_internet_connection">No network. \nPlease check your internet connection.</string>

    <!-- Strings for ingredients list fragment -->
...
