...

            <!-- Displays the current step and total steps -->
            <TextView
                android:id="@+id/tvStepOf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/flPlayer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/tools_step_total" />

            <!-- Next step button -->
...
